--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -94,3 +94,13 @@
   text-decoration: none;
 }
 
+.message .btn {
+  color: #fff;
+  font-size: 13px;
+  text-decoration: none;
+  width: 70px;
+}
+
+.message .btn:hover {
+  color: #fff;
+}
