--- a/app/views/account/bookings/index.html.erb
+++ b/app/views/account/bookings/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="container">
   <div class="fix-footer">
+    <h1 class="text-center"> Manage all your booking demands</h1>
     <% @bookings.each do |booking| %>
       <div class="message">
         <%= image_tag booking.baby.photo, class: 'avatar-square' %>
